[tool.poetry]
name = "test_poetry"
version = "0.1.0"
description = ""
authors = ["Corentin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "*"
packages = [
    { include = "hello.py" },
    { include = "test_poetry/hello_world.py" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
